[package]
name = "offsetup"
version = "0.1.0"
authors = ["Samuel Marks <samuelmarks@gmail.com>", "Peter Badenhorst @dev10"]
edition = "2018"

[dependencies]
liboffsetup = { git = "https://github.com/dev10/liboffsetup", branch = "feature/allow-overriding-install-priorities" }

[dev-dependencies]
assert_cmd = "0.11"
lazy_static = "1.3"
predicates = "1"
tempfile = "3"